--- a/src/main/webapp/stylesheets/navigation.css
+++ b/src/main/webapp/stylesheets/navigation.css
@@ -11,6 +11,7 @@ File for navigation bars and footers
 #welcome-user {
     color: #9d9d9d;
     margin-top: 15px;
+    margin-bottom: 10px;
     margin-right: 25px;
 }
 
